Added some basic styles and made a custom slider.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header>Etch-a-Sketch</header>
 
 <div id="slider">
-<p>Enter grid size</p>
-<input>
+<input type="range" min="4" max="64" value="16" class="slider" id="range">
+<span id="gridsize"></span>
 </div>
 
 <footer>made by zpdh</footer>
