--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <span id="gridsize"></span>
 </div>
 
+<div id="gridContent">
+</div>
+
 <footer>made by zpdh</footer>
 
 <script src="script.js"></script>
