Centered grid size slider and their respective text.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
 <header>Etch-a-Sketch</header>
 
+<div class="sliderContainer">
 <div id="slider">
+    <span id="gridsize"></span>
 <input type="range" min="4" max="64" value="16" class="slider" id="range">
-<span id="gridsize"></span>
+</div>
 </div>
 
-<div id="gridContent">
+<div class="gridContainer">
+    <div id="gridContent"></div>
 </div>
 
 <footer>made by zpdh</footer>
