Increased grid size by 120px, made a clear grid function & button.

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
 </div>
 </div>
 
-<div class="gridContainer">
+<div class="container">
+<div class="interactiveBlock">
+    <button class="btn" id="cleargrid">Clear & Update Grid</button>
+</div>
+
+<div class="gridContainer"> 
     <div id="gridContent"></div>
 </div>
 
+</div>
 <footer>made by zpdh</footer>
 
 <script src="script.js"></script>
