Implemented an eraser mode & brush mode. TBA: color picker

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 <div class="container">
 <div class="interactiveBlock">
+    <label for="colorbtn">Color:</label>
+    <input type="color" value="#333333" name="colorbtn" id="colorpicker">
+    <button class="btn" id="brush">Brush</button>
+    <button class="btn" id="eraser">Eraser</button>
     <button class="btn" id="cleargrid">Clear & Update Grid</button>
 </div>
 
