Slider now updates grid on change and added color picker.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <input type="color" value="#333333" name="colorbtn" id="colorpicker">
     <button class="btn" id="brush">Brush</button>
     <button class="btn" id="eraser">Eraser</button>
-    <button class="btn" id="cleargrid">Clear & Update Grid</button>
+    <button class="btn" id="cleargrid">Clear Grid</button>
 </div>
 
 <div class="gridContainer"> 
